--- a/DesktopOpen.css
+++ b/DesktopOpen.css
@@ -34,7 +34,7 @@ body {
 }
 
 #athlete-mobile {
-    background: url("assetprovidedmobile-shoes.jpg") no-repeat right center;
+    background: url("https://github.com/rksobers/Freemote/blob/main/AssetProvidedshoes.png?raw=true") no-repeat right center;
     background-size: cover;
     height: 400px;
     width: 100%;
